force-app/main/default/objects/pse__Backlog__c/fields/pse__Post_Process_RPG_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Post_Process_RPG_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>The number of regions, practices, or groups to process in a single batch if the backlog remainder is processed in a separate batch. The default value is 50. Contact FinancialForce.com customer support before changing this value.</description>
    <inlineHelpText>The number of regions, practices, or groups to process in a single batch if the backlog remainder is processed in a separate batch. The default value is 50. Contact FinancialForce.com customer support before changing this value.</inlineHelpText>
    <label>Post Process RPG Batch Size</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>