force-app/main/default/objects/pse__Backlog__c/fields/pse__Post_Processing_Delay__c.field-meta.xml
<CustomField>
    <fullName>pse__Post_Processing_Delay__c</fullName>
    <defaultValue>60</defaultValue>
    <description>This setting is deprecated and no longer used.</description>
    <inlineHelpText>This setting is deprecated and no longer used.</inlineHelpText>
    <label>Deprecated: Post Processing Delay</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>